Add description to destinations

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <div class="destination-container">
             <div class="destination" id="belize">
                 <h2>Paris</h2>
+                <p> I would like to go to Paris soon </p>
             </div>
 
             <div class="destination" id="barcelona">
                 <h2>Berlin</h2>
+                <p> I don't need to go to Berlin anytime soon </p>
             </div>
         </div>
     </div>
